--- a/package.json
+++ b/package.json
@@ -4,16 +4,12 @@
   "description": "[Wecode x Wanted] Backend pre-onboarding assignment",
   "main": "index.js",
   "scripts": {
-    "start": "node src",
-    "start:dev": "nodemon --watch src/ src/index.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "start": "node src/bin/www.js",
+    "start:dev": "nodemon --watch src/ src/bin/www.js",
+    "test": "mocha"
   },
   "keywords": [],
-  "author": "",
+  "author": "Donghoon Lee",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
@@ -27,7 +23,9 @@
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
-    "jest": "^27.3.1",
-    "nodemon": "^2.0.14"
+    "mocha": "^9.1.3",
+    "nodemon": "^2.0.14",
+    "should": "^13.2.3",
+    "supertest": "^6.1.6"
   }
 }
