--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pre-onboarding",
+  "name": "pre-onboarding-backend",
   "version": "1.0.0",
   "description": "[Wecode x Wanted] Backend pre-onboarding assignment",
   "main": "index.js",
